--- a/index.html
+++ b/index.html
@@ -13,36 +13,54 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-3">
-    <a class="navbar-brand" href="#">
-      <img src="/assets/img/duck.png" width="80px" alt="">
-    </a>
-    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-        aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link text-light" href="#" >Catalogo Libri</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Anagrafica Utenti</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Storico prestiti</a>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Help</a>
-          </li>
-        </li>
+  <!-- Header -->
+  <header>
 
-      </ul>
-      <form class="form-inline  my-2 my-lg-0 d-flex ">
-        <input class="form-control mr-sm-2" type="text" placeholder="Cerca...">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cerca</button>
-      </form>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container-fluid">
+        <!-- logo -->
+        <a class="navbar-brand" href="#">
+          <img src="./assets/img/duck.png" alt="" width="80px">
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- navbar menu -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Catalogo Libri</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Anagrafica Utenti</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Storico prestiti</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Help</a>
+            </li>
+          </ul>
+          <!-- navbar form -->
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Cerca..." aria-label="Search">
+            <button class="btn btn-outline-light" type="submit">Cerca</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <!-- /header -->
+
+  <!-- main -->
+   <main>
+    
+   </main>
+  <!-- /main -->
+
+
 
 
   <!-- Bootstrap script -->
