--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <!-- Bootstrap CSS  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <!-- Bootstrap Icon -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 </head>
 
 <body>
@@ -55,9 +59,149 @@
   <!-- /header -->
 
   <!-- main -->
-   <main>
-    
-   </main>
+  <main>
+
+    <div class="container mt-3">
+      <div class="row">
+
+        <div class="col-12 col-xxl-8">
+
+          <div class="table-header d-flex justify-content-between">
+            <h2>Catalogo Libri</h2>
+            <button type="button" class="btn btn-primary"> Aggiungi Libro</button>
+          </div>
+
+          <!-- table -->
+          <table class="table table-striped mt-3">
+            <thead>
+              <tr>
+                <th width="45%" scope="col">Titolo</th>
+                <th scope="col" class="d-none d-md-block">Data Prestito</th>
+                <th scope="col">Stato</th>
+                <th scope="col">Azioni</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>I pilastri della terra</td>
+                <td>-</td>
+                <td><span class="badge text-bg-success">Disponibile</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+              <tr>
+                <td>I promessi Sposi</td>
+                <td>-</td>
+                <td><span class="badge text-bg-success">Disponibile</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+              <tr>
+                <td>Il Signore degli anelli</td>
+                <td>18/10/2023</td>
+                <td><span class="badge text-bg-warning text-light">In prestito</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+              <tr>
+                <td>Harry Potter e la pietra filosofale</td>
+                <td>-</td>
+                <td><span class="badge text-bg-success">Disponibile</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+              <tr>
+                <td>Il codice da Vinci</td>
+                <td>-</td>
+                <td><span class="badge text-bg-danger">Non disponibile</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+              <tr>
+                <td>Shining</td>
+                <td>-</td>
+                <td><span class="badge text-bg-success">Disponibile</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+              <tr>
+                <td>La divina commedia</td>
+                <td>21/09/2023</td>
+                <td><span class="badge text-bg-warning text-light">In prestito</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+              <tr>
+                <td>Il trono di spade</td>
+                <td>-</td>
+                <td><span class="badge text-bg-success">Disponibile</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+              <tr>
+                <td>Il mondo di Sofia</td>
+                <td>-</td>
+                <td><span class="badge text-bg-danger">Non disponibile</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+              <tr>
+                <td>Le cronache di Narnia: il leona la strega e l'armadio</td>
+                <td>25/07/2023</td>
+                <td><span class="badge text-bg-warning text-light">In prestito</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+              <tr>
+                <td>Il piccolo principe</td>
+                <td>-</td>
+                <td><span class="badge text-bg-success">Disponibile</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+              <tr>
+                <td>La storia infinita</td>
+                <td>-</td>
+                <td><span class="badge text-bg-success">Disponibile</span></td>
+                <td>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
+                  <div class="btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></div>
+                </td>
+              </tr>
+
+            </tbody>
+          </table>
+
+          <div class="col-12">
+            <!-- card todo -->
+            <!-- card FAQ -->
+          </div>
+        </div>
+      </div>
+
+  </main>
   <!-- /main -->
 
 
