--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   <!-- main -->
   <main>
 
-    <div class="container mt-3">
-      <div class="row row-cols-auto">
+    <div class="container-md mt-3">
+      <div class="row row-cols-xl-2">
 
         <div class="col-12 col-xl-8">
 
@@ -84,7 +84,7 @@
             <tbody>
               <tr>
                 <td>I pilastri della terra</td>
-                <td>-</td>
+                <td><div class="d-none d-md-block">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -93,7 +93,7 @@
               </tr>
               <tr>
                 <td>I promessi Sposi</td>
-                <td>-</td>
+                <td><div class="d-none d-md-block">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -102,7 +102,7 @@
               </tr>
               <tr>
                 <td>Il Signore degli anelli</td>
-                <td>18/10/2023</td>
+                <td><div class="d-none d-md-block">18/10/2023</div></td>
                 <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -111,7 +111,7 @@
               </tr>
               <tr>
                 <td>Harry Potter e la pietra filosofale</td>
-                <td>-</td>
+                <td><div class="d-none d-md-block">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -120,7 +120,7 @@
               </tr>
               <tr>
                 <td>Il codice da Vinci</td>
-                <td>-</td>
+                <td><div class="d-none d-md-block">-</div></td>
                 <td><span class="badge text-bg-danger">Non disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -129,7 +129,7 @@
               </tr>
               <tr>
                 <td>Shining</td>
-                <td>-</td>
+                <td><div class="d-none d-md-block">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -138,7 +138,7 @@
               </tr>
               <tr>
                 <td>La divina commedia</td>
-                <td>21/09/2023</td>
+                <td><div class="d-none d-md-block">21/09/2023</div></td>
                 <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -147,7 +147,7 @@
               </tr>
               <tr>
                 <td>Il trono di spade</td>
-                <td>-</td>
+                <td><div class="d-none d-md-block">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -156,7 +156,7 @@
               </tr>
               <tr>
                 <td>Il mondo di Sofia</td>
-                <td>-</td>
+                <td><div class="d-none d-md-block">-</div></td>
                 <td><span class="badge text-bg-danger">Non disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -165,7 +165,7 @@
               </tr>
               <tr>
                 <td>Le cronache di Narnia: il leona la strega e l'armadio</td>
-                <td>25/07/2023</td>
+                <td><div class="d-none d-md-block">5/07/2023</div></td>
                 <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -174,7 +174,7 @@
               </tr>
               <tr>
                 <td>Il piccolo principe</td>
-                <td>-</td>
+                <td><div class="d-none d-md-block">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -183,7 +183,7 @@
               </tr>
               <tr>
                 <td>La storia infinita</td>
-                <td>-</td>
+                <td><div class="d-none d-md-block">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -218,14 +218,14 @@
             </div>
 
             <!-- card FAQ -->
-            <div class="card mt-3">
+            <div class="card mt-3 mb-4">
               <div class="card-header fw-bold fs-2">F.A.Q</div>
               <div class="card-body">
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        Accordion Item #1
+                        Come aggiungere un nuovo libro?
                       </button>
                     </h2>
                     <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -235,7 +235,7 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                        Accordion Item #2
+                        Come posso accedere all'angrafica utenti?
                       </button>
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -245,7 +245,7 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        Accordion Item #3
+                        Posso usare questa dashboard da mobile?
                       </button>
                     </h2>
                     <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
