--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
   <main>
 
     <div class="container-md mt-3">
-      <div class="row row-cols-xl-2">
+      <div class="row">
 
-        <div class="col-12 col-xl-8">
+        <div class="col-12 col-xl-8 mb-3">
 
           <div class="table-header d-flex justify-content-between">
             <h2>Catalogo Libri</h2>
@@ -76,7 +76,7 @@
             <thead>
               <tr>
                 <th width="45%" scope="col">Titolo</th>
-                <th scope="col" class="d-none d-md-block">Data Prestito</th>
+                <th scope="col" class="d-sm-none d-md-table-cell">Data Prestito</th>
                 <th scope="col">Stato</th>
                 <th scope="col">Azioni</th>
               </tr>
@@ -84,7 +84,7 @@
             <tbody>
               <tr>
                 <td>I pilastri della terra</td>
-                <td><div class="d-none d-md-block">-</div></td>
+                <td><div class="d-none d-md-table-cell">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -93,7 +93,7 @@
               </tr>
               <tr>
                 <td>I promessi Sposi</td>
-                <td><div class="d-none d-md-block">-</div></td>
+                <td><div class="d-none d-md-table-cell">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -102,7 +102,7 @@
               </tr>
               <tr>
                 <td>Il Signore degli anelli</td>
-                <td><div class="d-none d-md-block">18/10/2023</div></td>
+                <td><div class="d-none d-md-table-cell">18/10/2023</div></td>
                 <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -111,7 +111,7 @@
               </tr>
               <tr>
                 <td>Harry Potter e la pietra filosofale</td>
-                <td><div class="d-none d-md-block">-</div></td>
+                <td><div class="d-none d-md-table-cell">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -120,7 +120,7 @@
               </tr>
               <tr>
                 <td>Il codice da Vinci</td>
-                <td><div class="d-none d-md-block">-</div></td>
+                <td><div class="d-none d-md-table-cell">-</div></td>
                 <td><span class="badge text-bg-danger">Non disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -129,7 +129,7 @@
               </tr>
               <tr>
                 <td>Shining</td>
-                <td><div class="d-none d-md-block">-</div></td>
+                <td><div class="d-none d-md-table-cell">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -138,7 +138,7 @@
               </tr>
               <tr>
                 <td>La divina commedia</td>
-                <td><div class="d-none d-md-block">21/09/2023</div></td>
+                <td><div class="d-none d-md-table-cell">21/09/2023</div></td>
                 <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -147,7 +147,7 @@
               </tr>
               <tr>
                 <td>Il trono di spade</td>
-                <td><div class="d-none d-md-block">-</div></td>
+                <td><div class="d-none d-md-table-cell">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -156,7 +156,7 @@
               </tr>
               <tr>
                 <td>Il mondo di Sofia</td>
-                <td><div class="d-none d-md-block">-</div></td>
+                <td><div class="d-none d-md-table-cell">-</div></td>
                 <td><span class="badge text-bg-danger">Non disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -165,7 +165,7 @@
               </tr>
               <tr>
                 <td>Le cronache di Narnia: il leona la strega e l'armadio</td>
-                <td><div class="d-none d-md-block">5/07/2023</div></td>
+                <td><div class="d-none d-md-table-cell">5/07/2023</div></td>
                 <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -174,7 +174,7 @@
               </tr>
               <tr>
                 <td>Il piccolo principe</td>
-                <td><div class="d-none d-md-block">-</div></td>
+                <td><div class="d-none d-md-table-cell">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -183,7 +183,7 @@
               </tr>
               <tr>
                 <td>La storia infinita</td>
-                <td><div class="d-none d-md-block">-</div></td>
+                <td><div class="d-none d-md-table-cell">-</div></td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -192,71 +192,73 @@
               </tr>
 
             </tbody>
-          </table>
+          </table>          
+        </div>
 
-           <!-- card todo -->
-          <div class="col-12 col-xl-4">
-           
-            <div class="card mt-3">
-              <div class="card-header fw-bold fs-2">Todo</div>
-              <div class="card-body">
-                <ul class="list-group">
-                  <li class="list-group-item">
-                    <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
-                    <label class="form-check-label" for="firstCheckbox">Chiamare segreteria</label>
-                  </li>
-                  <li class="list-group-item">
-                    <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
-                    <label class="form-check-label" for="secondCheckbox">Mandare avvisi prestiti scaduti</label>
-                  </li>
-                  <li class="list-group-item">
-                    <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
-                    <label class="form-check-label" for="thirdCheckbox">Ordinare nuovi libri</label>
-                  </li>
-                </ul>
-              </div>
+        <!-- card column -->
+
+        <div class="col-12 col-xl-4">
+
+          <!-- card todo --> 
+          <div class="card">
+            <div class="card-header fw-bold fs-2">Todo</div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">
+                  <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                  <label class="form-check-label" for="firstCheckbox">Chiamare segreteria</label>
+                </li>
+                <li class="list-group-item">
+                  <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                  <label class="form-check-label" for="secondCheckbox">Mandare avvisi prestiti scaduti</label>
+                </li>
+                <li class="list-group-item">
+                  <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                  <label class="form-check-label" for="thirdCheckbox">Ordinare nuovi libri</label>
+                </li>
+              </ul>
             </div>
+          </div>
 
-            <!-- card FAQ -->
-            <div class="card mt-3 mb-4">
-              <div class="card-header fw-bold fs-2">F.A.Q</div>
-              <div class="card-body">
-                <div class="accordion accordion-flush" id="accordionFlushExample">
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        Come aggiungere un nuovo libro?
-                      </button>
-                    </h2>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
-                    </div>
+          <!-- card FAQ -->
+          <div class="card mt-3 mb-4">
+            <div class="card-header fw-bold fs-2">F.A.Q</div>
+            <div class="card-body">
+              <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                      Come aggiungere un nuovo libro?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
                   </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                        Come posso accedere all'angrafica utenti?
-                      </button>
-                    </h2>
-                    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-                    </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                      Come posso accedere all'angrafica utenti?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
                   </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        Posso usare questa dashboard da mobile?
-                      </button>
-                    </h2>
-                    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                      <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-                    </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                      Posso usare questa dashboard da mobile?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
                   </div>
                 </div>
               </div>
             </div>
-
           </div>
+
         </div>
       </div>
 
