fix bug table-cells

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <thead>
               <tr>
                 <th width="45%" scope="col">Titolo</th>
-                <th scope="col" class="d-sm-none d-md-table-cell">Data Prestito</th>
+                <th scope="col" class="d-none d-md-table-cell">Data Prestito</th>
                 <th scope="col">Stato</th>
                 <th scope="col">Azioni</th>
               </tr>
@@ -84,7 +84,7 @@
             <tbody>
               <tr>
                 <td>I pilastri della terra</td>
-                <td><div class="d-none d-md-table-cell">-</div></td>
+                <td class="d-none d-md-table-cell">-</td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -93,7 +93,7 @@
               </tr>
               <tr>
                 <td>I promessi Sposi</td>
-                <td><div class="d-none d-md-table-cell">-</div></td>
+                <td class="d-none d-md-table-cell">-</td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -102,7 +102,7 @@
               </tr>
               <tr>
                 <td>Il Signore degli anelli</td>
-                <td><div class="d-none d-md-table-cell">18/10/2023</div></td>
+                <td class="d-none d-md-table-cell">18/10/2023</td>
                 <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -111,7 +111,7 @@
               </tr>
               <tr>
                 <td>Harry Potter e la pietra filosofale</td>
-                <td><div class="d-none d-md-table-cell">-</div></td>
+                <td class="d-none d-md-table-cell">-</td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -120,7 +120,7 @@
               </tr>
               <tr>
                 <td>Il codice da Vinci</td>
-                <td><div class="d-none d-md-table-cell">-</div></td>
+                <td class="d-none d-md-table-cell">-</td>
                 <td><span class="badge text-bg-danger">Non disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -129,7 +129,7 @@
               </tr>
               <tr>
                 <td>Shining</td>
-                <td><div class="d-none d-md-table-cell">-</div></td>
+                <td class="d-none d-md-table-cell">-</td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -138,7 +138,7 @@
               </tr>
               <tr>
                 <td>La divina commedia</td>
-                <td><div class="d-none d-md-table-cell">21/09/2023</div></td>
+                <td class="d-none d-md-table-cell">21/09/2023</td>
                 <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -147,7 +147,7 @@
               </tr>
               <tr>
                 <td>Il trono di spade</td>
-                <td><div class="d-none d-md-table-cell">-</div></td>
+                <td class="d-none d-md-table-cell">-</td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -156,7 +156,7 @@
               </tr>
               <tr>
                 <td>Il mondo di Sofia</td>
-                <td><div class="d-none d-md-table-cell">-</div></td>
+                <td class="d-none d-md-table-cell">-</td>
                 <td><span class="badge text-bg-danger">Non disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -165,7 +165,7 @@
               </tr>
               <tr>
                 <td>Le cronache di Narnia: il leona la strega e l'armadio</td>
-                <td><div class="d-none d-md-table-cell">5/07/2023</div></td>
+                <td class="d-none d-md-table-cell">25/07/2023</td>
                 <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -174,7 +174,7 @@
               </tr>
               <tr>
                 <td>Il piccolo principe</td>
-                <td><div class="d-none d-md-table-cell">-</div></td>
+                <td class="d-none d-md-table-cell">-</td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
@@ -183,7 +183,7 @@
               </tr>
               <tr>
                 <td>La storia infinita</td>
-                <td><div class="d-none d-md-table-cell">-</div></td>
+                <td class="d-none d-md-table-cell">-</td>
                 <td><span class="badge text-bg-success">Disponibile</span></td>
                 <td>
                   <div class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></div>
