--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
   <!-- Bootstrap Icon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+   
+
 </head>
 
 <body>
 
   <!-- Header -->
   <header>
+    
 
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
       <div class="container-fluid">
         <!-- logo -->
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="./assets/img/duck.png" alt="" width="80px">
         </a>
 
@@ -66,13 +69,13 @@
 
         <div class="col-12 col-xl-8 mb-3">
 
-          <div class="table-header d-flex justify-content-between">
+          <div class="table-header d-flex justify-content-between align-center">
             <h2>Catalogo Libri</h2>
-            <button type="button" class="btn btn-primary"> Aggiungi Libro</button>
+            <a href="new-book.html" type="button" class="btn btn-primary"> Aggiungi Libro</a>
           </div>
 
           <!-- table -->
-          <table class="table table-striped mt-3">
+          <table class="table table-striped table-hover mt-3">
             <thead>
               <tr>
                 <th width="45%" scope="col">Titolo</th>
