fix bug button add book

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 
           <div class="table-header d-flex justify-content-between align-center">
             <h2>Catalogo Libri</h2>
-            <a href="new-book.html" type="button" class="btn btn-primary"> Aggiungi Libro</a>
+            <div class="add-book">
+              <a href="new-book.html" class="btn btn-primary">Aggiungi Libro</a>
+            </div>
           </div>
 
           <!-- table -->
