--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
       <div class="container-fluid">
         <!-- logo -->
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="home.html">
           <img src="./assets/img/duck.png" alt="" width="80px">
         </a>
 
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Catalogo Libri</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Catalogo Libri</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Anagrafica Utenti</a>
