--- a/new-book.html
+++ b/new-book.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
       <div class="container-fluid">
         <!-- logo -->
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="home.html">
           <img src="./assets/img/duck.png" alt="" width="80px">
         </a>
 
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Catalogo Libri</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Catalogo Libri</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Anagrafica Utenti</a>
@@ -70,7 +70,7 @@
       <h2 class="mb-3">Nuovo Libro</h2>
 
       <form action="#" method="get" class="row g-3">
-        
+
         <!-- nome autore -->
         <div class="col-6">
           <label for="inputauthorname" class="form-label">Nome Autore</label>
