--- a/home.html
+++ b/home.html
@@ -13,10 +13,17 @@
   <!-- Bootstrap Icon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+  <style>
+    .card-img-top{
+      width: 100%;
+      height: 20vw;
+      object-fit:cover;
+    }
+  </style>
 
 </head>
 
-<body>
+<body style="background-color: black;">
 
   <!-- Header -->
   <header>
@@ -69,7 +76,7 @@
       <div class="row gy-4">
 
         <div class="col-12 col-md-4">
-          <div class="card text-white bg-dark bg-gradient">
+          <div class="card text-white bg-warning bg-gradient">
             <img class="card-img-top" src="./assets/img/S3tPuSn-library-wallpaper.jpg" alt="Title" />
             <div class="card-body">
               <h4 class="card-title">Catalogo Libri</h4>
@@ -81,8 +88,8 @@
         </div>
 
         <div class="col-12 col-md-4">
-          <div class="card text-dark bg-primary-subtle bg-gradient">
-            <img height="183" class="card-img-top" src="./assets/img/istockphoto-1048450992-1024x1024.jpg" alt="Title" />
+          <div class="card text-dark bg-danger bg-gradient">
+            <img class="card-img-top" src="./assets/img/istockphoto-1048450992-1024x1024.jpg" alt="Title" />
             <div class="card-body">
               <h4 class="card-title">Anagrafica utenti</h4>
               <p class="card-text">
@@ -94,7 +101,7 @@
 
         <div class="col-12 col-md-4">
           <div class="card text-white bg-success bg-gradient">
-            <img height="183" class="card-img-top" src="./assets/img/time-1606153_1280.png" alt="Title" />
+            <img class="card-img-top" src="./assets/img/time-1606153_1280.png" alt="Title" />
             <div class="card-body">
               <h4 class="card-title">Storico Prestiti</h4>
               <p class="card-text">
@@ -106,7 +113,7 @@
 
         <div class="col-12 col-md-7">
           <div class="card text-white bg-primary bg-gradient">
-            <img height="300px" class="card-img-top" src="./assets/img/book-4299797_1280.png" alt="Title" />
+            <img class="card-img-top" src="./assets/img/book-4299797_1280.png" alt="Title" />
             <div class="card-body">
               <h4 class="card-title">Aggiungi Libro</h4>
               <p class="card-text">
@@ -118,7 +125,7 @@
 
         <div class="col-12 col-md-5">
           <div class="card text-white bg-info bg-gradient">
-            <img height="300" class="card-img-top" src="./assets/img/question-mark-1750942_1280.png" alt="Title" />
+            <img class="card-img-top" src="./assets/img/question-mark-1750942_1280.png" alt="Title" />
             <div class="card-body">
               <h4 class="card-title">Help</h4>
               <p class="card-text">
